<resources>
    <string name="app_name">LOLBox</string>
    <string name="discover_page_text">发现</string>
    <string name="friends_page_text">萌友</string>
    <string name="communicate_page_text">社区</string>
    <string name="myself_page_text">我</string>
    <string name="username">BlueDuck</string>
    <string name="userlv">Lv.3</string>
    <string name="userId">ID:15348141</string>
    <string name="userFocus_lab">关注</string>
    <string name="userFocused_lab">粉丝</string>
    <string name="userGetPraise_lab">获赞</string>
    <string name="userFocusCount">1</string>
    <string name="userFocusedCount">1</string>
    <string name="userGetPraiseCount">0</string>
    <string-array name="fightscoreShowMode">
        <item>全部</item>
        <item>匹配模式</item>
        <item>灵活排位</item>
    </string-array>
    <string-array name="gender">
        <item>男</item>
        <item>女</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
