<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <!--顶部操作栏-->
    <LinearLayout
        android:id="@+id/topbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/head_card"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center_vertical">
        <android.support.design.widget.TabLayout
            android:id="@+id/topNavi"
            app:tabIndicatorColor="@color/colorBlack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </android.support.design.widget.TabLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right">
            <ImageButton
                android:id="@+id/app_bar_setting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_appbar_settings"
                android:layout_margin="@dimen/marginHorizon"/>
        </RelativeLayout>

    </LinearLayout>
    <!--个人名片-->
    <RelativeLayout
        android:id="@+id/head_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/topbar"
        android:layout_margin="@dimen/marginHorizon">
        <ImageButton
            android:id="@+id/head_pic"
            android:layout_width="@dimen/head_pic_h_w"
            android:layout_height="@dimen/head_pic_h_w"
            android:background="@drawable/head_pic"/>
        <LinearLayout
            android:layout_toRightOf="@id/head_pic"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/head_pic_h_w"
            android:orientation="vertical"
            android:layout_marginLeft="@dimen/marginHorizon">
            <LinearLayout
                android:id="@+id/cardname_board"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:orientation="horizontal"
                android:layout_marginTop="5dp"
                android:gravity="center_vertical"
                android:layout_weight="1">
                <TextView
                    android:id="@+id/card_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/username"
                    android:layout_toRightOf="@id/head_pic"
                    android:textSize="@dimen/textsize_large"/>
                <TextView
                    android:id="@+id/user_lv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/userlv"
                    android:textColor="@color/colorWhite"
                    android:background="@color/colorGray"
                    android:textSize="@dimen/textsizeSmall"
                    android:layout_toRightOf="@id/card_username"
                    android:layout_marginHorizontal="5dp"/>
                <TextView
                    android:id="@+id/user_ID"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/userId"
                    android:textSize="@dimen/textsizeSmall"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_below="@id/cardname_board"
                android:layout_toRightOf="@id/head_pic"
                android:gravity="center_vertical">
                <TextView
                    android:id="@+id/userFocus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/userFocus_lab"
                    android:textSize="@dimen/textsize_nomal"/>
                <TextView
                    android:id="@+id/FocusCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/userFocusCount"
                    android:textSize="@dimen/textsize_nomal"/>
                <TextView
                    android:id="@+id/userFocused"
                    android:layout_marginLeft="@dimen/marginHorizon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/userFocused_lab"
                    android:textSize="@dimen/textsize_nomal"/>
                <TextView
                    android:id="@+id/FocusedCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/userFocusedCount"
                    android:textSize="@dimen/textsize_nomal"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/userGetPraise_lab"
                    android:textSize="@dimen/textsize_nomal"
                    android:layout_marginLeft="@dimen/marginHorizon"/>
                <TextView
                    android:id="@+id/GetPraiseCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/userGetPraiseCount"
                    android:textSize="@dimen/textsize_nomal"/>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
    <android.support.v4.view.ViewPager
        android:id="@+id/viewpager_grad"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/marginVertical"
        app:layout_constraintTop_toBottomOf="@id/head_card"
        app:layout_constraintBottom_toBottomOf="parent">
    </android.support.v4.view.ViewPager>
</android.support.constraint.ConstraintLayout>